Remove a barrier when EDGE_CROSSING is remoed (PR lto/88858).

gcc/ChangeLog:

2019-01-23  Martin Liska  <mliska@suse.cz>

	PR lto/88858
	* cfgrtl.c (cfg_layout_redirect_edge_and_branch): When BB_FOOTER
	contains a BARRIER and we're removing a crossing jump, remove
	the barrier.